# ferbot

./: .example.env  .gitignore  README.md  pyproject.toml
ferbot/: main.py
